Fixed my scrollbar mistake

--- a/client/styles/components/_preview-frame.scss
+++ b/client/styles/components/_preview-frame.scss
@@ -1,7 +1,6 @@
 .preview-frame {
   min-height: 100%;
   min-width: 100%;
-  position: absolute;
   border-width: 0;
 }
 
